--- a/sass/_menudrop.scss
+++ b/sass/_menudrop.scss
@@ -14,33 +14,33 @@ $light-hover: #074A6F;
 $dark-hover: #FFD78A;
 
 .menu {
+    z-index: 2;
     align-self: baseline;
     background: linear-gradient(253.36deg, #BDE6F7 -18.33%, #C8DED4 100.44%, #C2D9C9 100.44%);
     width: $font-p-std*13;
     position: absolute;
-    right: 80px;
-    top: 25px;
+    right: 95px;
+    top: 30px;
     border-radius: $font-p-std*.4;
     transform: translateY(0px);
     transition: $transition;
     transition-delay: $transition;
     @media (min-width: 1640px) and (orientation: landscape){
         width: $font-p-hd*13;
-        right: 105px;
-        top: 35px;
         border-radius: $font-p-hd*.4;
     }
     @media (min-width: 2240px) and (orientation: landscape){
         width: $font-p-2k*13;
-        right: 155px;
-        top: 55px;
         border-radius: $font-p-2k*.4;
     }
     @media (min-width: 3200px) and (orientation: landscape){
+        right: calc((100vw - 3200px)/2 + 95px);
         width: $font-p-4k*13;
-        right: 210px;
-        top: 65px;
         border-radius: $font-p-4k*.4;
+    }
+    @media (max-width: 1044px) and (orientation: portrait) {
+        right: 90px;
+        top: 20px;
     }
     ul {
         padding-top: $font-p-std*.75;
