--- a/team/sass/style.css
+++ b/team/sass/style.css
@@ -1,156 +1,66 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;800&display=swap");
-header {
+@media (min-width: 3200px) and (orientation: landscape) {
+  .main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.main header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 4.6875rem;
-  margin: 0 1.5rem;
-  padding: 0.75rem 0;
-}
-@media (min-width: 1640px) and (orientation: landscape) {
-  header {
-    margin: 0 2rem;
-    padding: 1rem 0;
-    height: 6.25rem;
-  }
-}
-@media (min-width: 2240px) and (orientation: landscape) {
-  header {
-    margin: 0 3rem;
-    padding: 1.5rem 0;
-    height: 9.375rem;
-  }
+  height: 88px;
+  padding: 24px;
 }
 @media (min-width: 3200px) and (orientation: landscape) {
-  header {
-    margin: 0 4rem;
-    padding: 2rem 0;
-    height: 12.5rem;
+  .main header {
+    width: 3200px;
   }
 }
-header img {
-  height: 1.5rem;
-}
-@media (min-width: 1640px) and (orientation: landscape) {
-  header img {
-    height: 2rem;
+@media (max-width: 1044px) and (orientation: portrait) {
+  .main header {
+    height: 68px;
+    padding: 16px;
   }
 }
-@media (min-width: 2240px) and (orientation: landscape) {
-  header img {
-    height: 3rem;
-  }
+.main header img {
+  height: 2rem;
 }
-@media (min-width: 3200px) and (orientation: landscape) {
-  header img {
-    height: 4rem;
-  }
-}
-header nav {
+.main header nav {
   display: flex;
   align-items: center;
   justify-content: flex-end;
   height: 100%;
 }
-header nav i img {
-  height: 1.125rem;
-  width: 1.125rem;
-}
-@media (min-width: 1640px) and (orientation: landscape) {
-  header nav i img {
-    height: 1.5rem;
-    width: 1.5rem;
-  }
-}
-@media (min-width: 2240px) and (orientation: landscape) {
-  header nav i img {
-    height: 2.25rem;
-    width: 2.25rem;
-  }
-}
-@media (min-width: 3200px) and (orientation: landscape) {
-  header nav i img {
-    height: 3rem;
-    width: 3rem;
-  }
-}
-header nav .switch {
-  margin-left: 0.5625rem;
-}
-@media (min-width: 1640px) and (orientation: landscape) {
-  header nav .switch {
-    margin-left: 0.75rem;
-  }
-}
-@media (min-width: 2240px) and (orientation: landscape) {
-  header nav .switch {
-    margin-left: 1.125rem;
-  }
-}
-@media (min-width: 3200px) and (orientation: landscape) {
-  header nav .switch {
-    margin-left: 1.5rem;
-  }
-}
-header nav .switch i img {
+.main header nav i img {
   height: 1.5rem;
   width: 1.5rem;
 }
-@media (min-width: 1640px) and (orientation: landscape) {
-  header nav .switch i img {
-    height: 2rem;
-    width: 2rem;
-  }
+.main header nav .switch {
+  margin-left: 0.75rem;
 }
-@media (min-width: 2240px) and (orientation: landscape) {
-  header nav .switch i img {
-    height: 3rem;
-    width: 3rem;
-  }
+.main header nav .switch i img {
+  height: 2rem;
+  width: 2rem;
 }
-@media (min-width: 3200px) and (orientation: landscape) {
-  header nav .switch i img {
-    height: 4rem;
-    width: 4rem;
-  }
+.main header nav .switch i:first-child img {
+  height: 1.6rem;
+  width: 1.6rem;
+  margin: 0.2rem;
 }
-header nav .switch i:first-child img {
-  height: 1.2rem;
-  width: 1.2rem;
-  margin: 0.15rem;
-}
-@media (min-width: 1640px) and (orientation: landscape) {
-  header nav .switch i:first-child img {
-    height: 1.6rem;
-    width: 1.6rem;
-    margin: 0.2rem;
-  }
-}
-@media (min-width: 2240px) and (orientation: landscape) {
-  header nav .switch i:first-child img {
-    height: 2.4rem;
-    width: 2.4rem;
-    margin: 0.3rem;
-  }
-}
-@media (min-width: 3200px) and (orientation: landscape) {
-  header nav .switch i:first-child img {
-    height: 3.2rem;
-    width: 3.2rem;
-    margin: 0.4rem;
-  }
-}
-header nav .switch:hover {
+.main header nav .switch:hover {
   cursor: pointer;
 }
 
 .menu {
+  z-index: 2;
   align-self: baseline;
   background: linear-gradient(253.36deg, #BDE6F7 -18.33%, #C8DED4 100.44%, #C2D9C9 100.44%);
   width: 13rem;
   position: absolute;
-  right: 80px;
-  top: 25px;
+  right: 95px;
+  top: 30px;
   border-radius: 0.4rem;
   transform: translateY(0px);
   transition: 0.3s;
@@ -159,25 +69,26 @@ header nav .switch:hover {
 @media (min-width: 1640px) and (orientation: landscape) {
   .menu {
     width: 14.625rem;
-    right: 105px;
-    top: 35px;
     border-radius: 0.45rem;
   }
 }
 @media (min-width: 2240px) and (orientation: landscape) {
   .menu {
     width: 22.75rem;
-    right: 155px;
-    top: 55px;
     border-radius: 0.7rem;
   }
 }
 @media (min-width: 3200px) and (orientation: landscape) {
   .menu {
+    right: calc((100vw - 3200px) / 2 + 95px);
     width: 30.875rem;
-    right: 210px;
-    top: 65px;
     border-radius: 0.95rem;
+  }
+}
+@media (max-width: 1044px) and (orientation: portrait) {
+  .menu {
+    right: 90px;
+    top: 20px;
   }
 }
 .menu ul {
@@ -301,15 +212,10 @@ main {
   flex-direction: column;
 }
 main h1 {
+  color: #000000;
   font-weight: 800;
-  font-size: 1.25rem;
-  margin-bottom: 3.75rem;
-}
-@media (min-width: 1640px) and (orientation: landscape) {
-  main h1 {
-    font-size: 1.5rem;
-    margin-bottom: 4.5rem;
-  }
+  font-size: 1.5rem;
+  margin-bottom: 4.5rem;
 }
 @media (min-width: 2240px) and (orientation: landscape) {
   main h1 {
@@ -324,43 +230,292 @@ main h1 {
   }
 }
 
-footer {
+body.dark main h1 {
+  color: #ffffff;
+}
+
+.background {
+  position: relative;
+  z-index: -1;
+}
+@media (max-width: 1023px) and (orientation: landscape) and (max-height: 600px) {
+  .background {
+    display: none;
+  }
+}
+@media (max-width: 1044px) and (orientation: portrait) {
+  .background {
+    display: none;
+  }
+}
+.background div {
+  position: absolute;
+  right: 50px;
+  top: -60px;
+}
+.background div img {
+  height: 350px;
+}
+@media (min-width: 2240px) and (orientation: landscape) {
+  .background div img {
+    height: 500px;
+  }
+}
+@media (min-width: 3200px) and (orientation: landscape) {
+  .background div {
+    right: calc((100vw - 3200px) / 2 + 50px);
+  }
+  .background div img {
+    height: 650px;
+  }
+}
+
+.cardano div {
+  top: 50px;
+  left: 0;
+}
+.cardano div img {
+  height: 600px;
+}
+@media (min-width: 2240px) and (orientation: landscape) {
+  .cardano div img {
+    height: 850px;
+  }
+}
+@media (min-width: 3200px) and (orientation: landscape) {
+  .cardano div {
+    left: calc((100vw - 3200px) / 2);
+  }
+  .cardano div img {
+    height: 1200px;
+  }
+}
+
+.footer div {
+  top: -200px;
+  left: 0;
+}
+@media (min-width: 2240px) and (orientation: landscape) {
+  .footer div {
+    top: -250px;
+  }
+}
+@media (min-width: 3200px) and (orientation: landscape) {
+  .footer div {
+    top: -300px;
+    left: calc((100vw - 3200px) / 2);
+  }
+}
+
+.gruopCards {
+  margin: 0 2.5%;
+  max-width: 1400px;
   display: flex;
+  justify-content: center;
+  gap: 55px;
+  flex-wrap: wrap;
+}
+@media (min-width: 2240px) and (orientation: landscape) {
+  .gruopCards {
+    max-width: 2000px;
+    gap: 77px;
+  }
+}
+@media (min-width: 3200px) and (orientation: landscape) {
+  .gruopCards {
+    max-width: 2800px;
+    gap: 110px;
+  }
+}
+.gruopCards .card {
+  background: linear-gradient(180deg, #E3F3FB 0%, #E7F5FB 100%);
+  width: 275px;
+  height: auto;
+  border-radius: 11px;
+  transition: 0.25s;
+}
+@media (min-width: 2240px) and (orientation: landscape) {
+  .gruopCards .card {
+    width: 385px;
+    border-radius: 15.4px;
+  }
+}
+@media (min-width: 3200px) and (orientation: landscape) {
+  .gruopCards .card {
+    width: 550px;
+    border-radius: 22px;
+  }
+}
+.gruopCards .card:hover {
+  scale: 1.1;
+}
+.gruopCards .card .icon_card {
+  position: relative;
+}
+.gruopCards .card .icon_card img {
+  width: 33px;
+  border-radius: 11px 0 0 0;
+}
+@media (min-width: 2240px) and (orientation: landscape) {
+  .gruopCards .card .icon_card img {
+    width: 46.2px;
+    border-radius: 15.4px 0 0 0;
+  }
+}
+@media (min-width: 3200px) and (orientation: landscape) {
+  .gruopCards .card .icon_card img {
+    width: 66px;
+    border-radius: 22px 0 0 0;
+  }
+}
+.gruopCards .card .icon_card a {
+  position: absolute;
+}
+.gruopCards .card .main_card {
+  padding: 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.gruopCards .card .main_card h4 {
+  color: #000000;
+  font-weight: 700;
+  font-style: italic;
+  font-size: 1.125rem;
+  margin-top: 1.125rem;
+}
+@media (min-width: 2240px) and (orientation: landscape) {
+  .gruopCards .card .main_card h4 {
+    font-size: 1.5rem;
+    margin-top: 1.5rem;
+  }
+}
+@media (min-width: 3200px) and (orientation: landscape) {
+  .gruopCards .card .main_card h4 {
+    font-size: 2.25rem;
+    margin-top: 2.25rem;
+  }
+}
+.gruopCards .card .main_card h3 {
+  color: #000000;
+  font-weight: 700;
+  font-size: 1.25rem;
+  margin: 1.25rem 0;
+}
+@media (min-width: 2240px) and (orientation: landscape) {
+  .gruopCards .card .main_card h3 {
+    font-size: 1.75rem;
+    margin: 1.75rem 0;
+  }
+}
+@media (min-width: 3200px) and (orientation: landscape) {
+  .gruopCards .card .main_card h3 {
+    font-size: 2.5rem;
+    margin: 2.5rem 0;
+  }
+}
+.gruopCards .card .main_card .description {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.gruopCards .card .main_card .description p {
+  color: #000000;
+  font-weight: 600;
+  text-align: center;
+  font-size: 0.875rem;
+  line-height: 1.3125rem;
+}
+@media (min-width: 2240px) and (orientation: landscape) {
+  .gruopCards .card .main_card .description p {
+    font-size: 1.25rem;
+    line-height: 1.875rem;
+  }
+}
+@media (min-width: 3200px) and (orientation: landscape) {
+  .gruopCards .card .main_card .description p {
+    font-size: 1.75rem;
+    line-height: 2.625rem;
+  }
+}
+.gruopCards .card .img {
+  display: flex;
+  justify-content: center;
+}
+.gruopCards .card .img img {
+  width: 70%;
+}
+
+body.dark .card {
+  background: #141B22;
+}
+body.dark .card .main_card h3 {
+  color: #ffffff;
+}
+body.dark .card .main_card h4 {
+  color: #ffffff;
+}
+body.dark .card .main_card .description p {
+  color: #ffffff;
+}
+
+footer {
   margin-top: 100px;
-  padding: 1.125rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 @media (min-width: 1640px) and (orientation: landscape) {
   footer {
     margin-top: 125px;
-    padding: 1.25rem;
   }
 }
 @media (min-width: 2240px) and (orientation: landscape) {
   footer {
     margin-top: 200px;
-    padding: 2rem;
   }
 }
 @media (min-width: 3200px) and (orientation: landscape) {
   footer {
     margin-top: 300px;
+  }
+}
+footer .footer {
+  width: 100%;
+  display: flex;
+  padding: 1.125rem;
+}
+@media (min-width: 1640px) and (orientation: landscape) {
+  footer .footer {
+    padding: 1.25rem;
+  }
+}
+@media (min-width: 2240px) and (orientation: landscape) {
+  footer .footer {
+    padding: 2rem;
+  }
+}
+@media (min-width: 3200px) and (orientation: landscape) {
+  footer .footer {
     padding: 2.625rem;
+    width: 3200px;
   }
 }
 @media (max-width: 1499px) and (orientation: landscape) {
-  footer {
+  footer .footer {
     flex-direction: column;
   }
 }
 @media (max-width: 1023px) and (orientation: landscape) and (max-height: 600px) {
-  footer {
+  footer .footer {
     flex-direction: column;
     padding: 0% 1.125rem;
     align-items: center;
   }
 }
 @media (max-width: 1044px) and (orientation: portrait) {
-  footer {
+  footer .footer {
     flex-direction: column;
     padding: 0% 1.125rem;
     align-items: center;
@@ -688,7 +843,7 @@ footer .icons i {
   transition: 0.15s;
 }
 footer .icons i:hover {
-  cursor: pointer;
+  scale: 1.1;
 }
 footer .icons img {
   height: 1.5rem;
