--- a/sass/_mainpage.scss
+++ b/sass/_mainpage.scss
@@ -1,10 +1,8 @@
 @use "./fontweight" as fonts;
 @use "./header" as header;
 
-$height-std: calc(100vh - (header.$icon-std*3.125));
-$height-hd: calc(100vh - (header.$icon-hd*3.125));
-$height-2k: calc(100vh - (header.$icon-2k*3.125));
-$height-4k: calc(100vh - (header.$icon-4k*3.125));
+$height-std: calc(100vh - header.$height-std);
+
 
 $font-h2-min: 2.25rem;
 $font-h2-std: 3.5rem;
@@ -54,10 +52,10 @@ $box-shadow-light-4k: 0px 0px $font-btn-4k*.25 0px rgba(0, 0, 0, 0.25);
 $box-shadow-dark-4k: 0px 0px $font-btn-4k*.25 0px rgba(255, 255, 255, 0.25);
 $border-btn-4k: $font-btn-4k*.6;
 
-$width-img-main-std: 360px;
-$width-img-main-hd: 560px;
-$width-img-main-2k: 720px;
-$width-img-main-4k: 920px;
+$width-img-main-std: 310px;
+$width-img-main-hd: 475px;
+$width-img-main-2k: 610px;
+$width-img-main-4k: 780px;
 
 
 $transition: 0.25s;
@@ -72,14 +70,8 @@ main {
     justify-content: space-between;
     margin: 0 10%;
     min-height: $height-std;
-    @media (min-width: 1640px) and (orientation: landscape){
-        min-height: $height-hd;
-    }
-    @media (min-width: 2240px) and (orientation: landscape){
-        min-height: $height-2k;
-    }
     @media (min-width: 3200px) and (orientation: landscape){
-        min-height: $height-4k;
+        width: 2700px;
     }
 
     .articleLeft {
