--- a/team/sass/_footer.scss
+++ b/team/sass/_footer.scss
@@ -53,34 +53,47 @@ $light-color: #C2CAD1;
 $transition-1: 0.15s;
 
 footer {
-    display: flex;
     margin-top: $margin-section-std;
-    padding: $font-h4-std;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     @media (min-width: 1640px) and (orientation: landscape){
         margin-top: $margin-section-hd;
-        padding: $font-h4-hd;
     }
     @media (min-width: 2240px) and (orientation: landscape){
         margin-top: $margin-section-2k;
-        padding: $font-h4-2k;
     }
     @media (min-width: 3200px) and (orientation: landscape){
         margin-top: $margin-section-4k;
-        padding: $font-h4-4k;
     }
-    @media (max-width: 1499px) and (orientation: landscape){
-        flex-direction: column;
-    }
-    @media (max-width: 1023px) and (orientation: landscape) and (max-height: 600px){
-        flex-direction: column;
-        padding: 0% $font-h4-std;
-        align-items: center;
-    }
-    @media (max-width: 1044px) and (orientation: portrait) {
-        flex-direction: column;
-        padding: 0% $font-h4-std;
-        align-items: center;
-    }
+    .footer{
+        width: 100%;
+        display: flex;
+        padding: $font-h4-std;
+        @media (min-width: 1640px) and (orientation: landscape){
+            padding: $font-h4-hd;
+        }
+        @media (min-width: 2240px) and (orientation: landscape){
+            padding: $font-h4-2k;
+        }
+        @media (min-width: 3200px) and (orientation: landscape){
+            padding: $font-h4-4k;
+            width: 3200px;
+        }
+        @media (max-width: 1499px) and (orientation: landscape){
+            flex-direction: column;
+        }
+        @media (max-width: 1023px) and (orientation: landscape) and (max-height: 600px){
+            flex-direction: column;
+            padding: 0% $font-h4-std;
+            align-items: center;
+        }
+        @media (max-width: 1044px) and (orientation: portrait) {
+            flex-direction: column;
+            padding: 0% $font-h4-std;
+            align-items: center;
+        }
+        }
 
     .foot{
         display: flex;
@@ -288,7 +301,7 @@ footer {
             align-items: center;
             transition: 0.15s;
             &:hover{
-                cursor: pointer;
+                scale: 1.1;
                 
             }
         }
