--- a/maintenance/sass/style.css
+++ b/maintenance/sass/style.css
@@ -29,6 +29,16 @@ div {
 div img {
   width: 360px;
 }
+@media (min-width: 2240px) and (orientation: landscape) {
+  div img {
+    width: 550px;
+  }
+}
+@media (min-width: 3200px) and (orientation: landscape) {
+  div img {
+    width: 825px;
+  }
+}
 @media (max-width: 1640px) and (orientation: landscape) {
   div img {
     width: 320px;
@@ -55,6 +65,18 @@ div h1 {
   margin-top: 2rem;
   text-align: center;
 }
+@media (min-width: 2240px) and (orientation: landscape) {
+  div h1 {
+    font-size: 3rem;
+    margin-top: 3rem;
+  }
+}
+@media (min-width: 3200px) and (orientation: landscape) {
+  div h1 {
+    font-size: 4.5rem;
+    margin-top: 4.5rem;
+  }
+}
 @media (max-width: 1640px) and (orientation: landscape) {
   div h1 {
     font-size: 1.5rem;
@@ -73,6 +95,20 @@ div p {
   margin-top: 1.25rem;
   margin-bottom: 2.5rem;
   text-align: center;
+}
+@media (min-width: 2240px) and (orientation: landscape) {
+  div p {
+    font-size: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 4rem;
+  }
+}
+@media (min-width: 3200px) and (orientation: landscape) {
+  div p {
+    font-size: 3rem;
+    margin-top: 3rem;
+    margin-bottom: 6rem;
+  }
 }
 @media (max-width: 1640px) and (orientation: landscape) {
   div p {
@@ -107,6 +143,24 @@ div button a {
   font-size: 1.5rem;
   color: #FFFFFF;
   text-align: center;
+}
+@media (min-width: 2240px) and (orientation: landscape) {
+  div button {
+    width: 420px;
+    border-radius: 20px;
+  }
+  div button a {
+    font-size: 2.25rem;
+  }
+}
+@media (min-width: 3200px) and (orientation: landscape) {
+  div button {
+    width: 630px;
+    border-radius: 30px;
+  }
+  div button a {
+    font-size: 3.5rem;
+  }
 }
 @media (max-width: 1640px) and (orientation: landscape) {
   div button {
